# court-jester-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  install.sh  justfile  rust-toolchain.toml  tasks.json
bench/: README.md  __init__.py  agent_trace.py  autoresearch_signature_contracts.py  autoresearch_terminal_bench.py  cli_client.py  common.py  dashboard.html  dashboard.py  express-clone-alpha-status.md  express-full-clone-plan.md  express-testfile-gauntlet-v1-plan.md  library-semantic-core-plan.md  loop-diagrams.md  materialize_mutation.py  mcp_client.py  providers.py  run_matrix.py  runner.py  seed_express_clone_bug.py  summarize_runs.py  test_agent_trace.py  test_materialize_mutation.py  test_run_matrix.py  test_runner.py  test_summarize_runs.py  verify-eval-roadmap.md
docs/: README.md  benchmark-2026-03-26.md  benchmark-2026-04-10.md  benchmark-2026-04-18.md  benchmark-2026-04-20.md  benchmark-methodology.md  big-benchmark-runbook.md  ci-adoption.md  court-jester-overview.md  external-heldout-guardrail.md  proof-points.md  release-notes-0.1.10.md  release-notes-0.1.11.md  release-notes-0.1.12.md  release-notes-0.1.13.md  release-notes-0.1.14.md  release-notes-0.1.15.md  release-notes-0.1.16.md  release-notes-0.1.5.md  release-notes-0.1.6.md  release-notes-0.1.7.md  release-notes-0.1.8.md  release-notes-0.1.9.md  release-readiness-private-beta.md  report-schema.md  swebench-lite-plan.md  system-flow.md  terminal-bench-slices.md  tool-flow-diagram.md
paper/: causal-control-package.md  court-jester-paper-memo.md  experiment_log.md  figure-plan.md  (+9 more)
(+602 files in other folders)
