[package]
name = "court-jester-mcp"
version = "0.1.8"
edition = "2021"
license = "MIT"

[[bin]]
name = "court-jester"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["resource"] }
libc = "0.2"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
